# ChangeLog for media-fonts/vc-fonts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/vc-fonts/ChangeLog,v 1.22 2007/09/14 16:54:36 nixnut Exp $

  14 Sep 2007; nixnut <nixnut@gentoo.org> vc-fonts-20020207-r2.ebuild:
  Stable on ppc wrt bug 192060

  12 Sep 2007; Raúl Porcel <armin76@gentoo.org>
  vc-fonts-20020207-r2.ebuild:
  alpha/ia64/x86 stable wrt #192060

  11 Sep 2007; Christoph Mende <angelos@gentoo.org>
  vc-fonts-20020207-r2.ebuild:
  Stable on amd64 wrt bug #192060

*vc-fonts-20020207-r2 (29 Jul 2007)

  29 Jul 2007; Ryan Hill <dirtyepic@gentoo.org> -vc-fonts-20020207.ebuild,
  +vc-fonts-20020207-r2.ebuild:
  Rev bump using font.eclass. Contains a newer version of bleed that includes
  a slashed zero.

  22 Jul 2007; Ryan Hill <dirtyepic@gentoo.org> vc-fonts-20020207.ebuild,
  vc-fonts-20020207-r1.ebuild:
  Remove virtual/x11.

  18 Mar 2007; Simon Stelling <blubb@gentoo.org>
  vc-fonts-20020207-r1.ebuild:
  stable on amd64; bug 171063

  17 Mar 2007; Markus Rothe <corsair@gentoo.org>
  vc-fonts-20020207-r1.ebuild:
  Stable on ppc64; bug #171063

  17 Mar 2007; nixnut <nixnut@gentoo.org> vc-fonts-20020207-r1.ebuild:
  Stable on ppc wrt bug 171063

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org>
  vc-fonts-20020207-r1.ebuild:
  x86 stable

  27 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  vc-fonts-20020207-r1.ebuild:
  Add ~x86-fbsd keyword.

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  vc-fonts-20020207-r1.ebuild:
  Stable on Alpha.

  07 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  vc-fonts-20020207-r1.ebuild:
  Stable on sparc

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  vc-fonts-20020207-r1.ebuild:
  Mark 20020207-r1 stable on ia64

  23 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  vc-fonts-20020207.ebuild:
  Port to modular X.

*vc-fonts-20020207-r1 (11 Jan 2006)

  11 Jan 2006; Robin H. Johnson <robbat2@gentoo.org>
  +vc-fonts-20020207-r1.ebuild: