@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/vc-fonts
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/vc-fonts/ChangeLog,v 1.22 2007/09/14 16:54:36 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/vc-fonts/ChangeLog,v 1.23 2007/09/16 03:32:49 dirtyepic Exp $
+
+  16 Sep 2007; Ryan Hill <dirtyepic@gentoo.org> vc-fonts-20020207-r2.ebuild:
+  Install bdf if USE="-X".
 
   14 Sep 2007; nixnut <nixnut@gentoo.org> vc-fonts-20020207-r2.ebuild:
   Stable on ppc wrt bug 192060
